# bertalign

./: .gitignore  CHUNK_LOOKUP_README.md  CLAUDE.md  alignment_log.txt  collect_md_files.py  config.py  debug_data.py  main.py  pyproject.toml  requirements.txt  test.py
app/: README.md  chunk_lookup_app.py  parallel_text_viewer.py  pdf_parallel_viewer.py  test_chunk_lookup.py  test_italian_lookup.py  web_parallel_viewer.py
app/templates/: parallel_viewer.html  pdf_viewer.html
bertalign/: corelib.py
bertalign/__pycache__/: corelib.calculate_length_penalty-165.py310.1.nbc  corelib.calculate_length_penalty-165.py310.nbi  corelib.calculate_neighbor_similarity-142.py310.1.nbc  corelib.calculate_neighbor_similarity-142.py310.nbi  corelib.calculate_similarity_score-107.py310.1.nbc  corelib.calculate_similarity_score-107.py310.nbi  corelib.first_pass_align-269.py310.1.nbc  corelib.first_pass_align-269.py310.nbi  corelib.nb_dot-194.py310.1.nbc  corelib.nb_dot-194.py310.nbi  corelib.second_pass_align-24.py310.1.nbc  corelib.second_pass_align-24.py310.nbi
data/: melancolia_della_resistenza.jsonl  test.jsonl
docs/: retrieval_system_architecture.md
retrieval/: README.md  __init__.py  __main__.py  build_index.py  config.py  indexer.py  test_index.py
validation/: README.md  validate_alignments.py
